@@ -89,6 +89,7 @@ be removed.
           Bio::Taxonomy
           Bio::Taxonomy::*
           Bio::Tools::AlignFactory
+          Bio::Tools::Analysis::DNA::ESEfinder
           Bio::Tools::Phylo::Gumby
           Bio::Tools::dpAlign
           Bio::Tools::pSW
